# k_sky_produser

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  ruff.toml
apps/check/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/check/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
nginx_conf/: nginx.conf  nginx_site.conf
produser/: produser.py
tests/: conftest.py  factories.py  fixtures.py  test_color.py  test_palette.py
